--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "devDependencies": {
     "gulp": "^3.8.0",
+    "gulp-changed": "^0.4.0",
+    "gulp-clean": "^0.3.0",
+    "gulp-concat": "^2.2.0",
+    "gulp-livereload": "^2.1.0",
     "gulp-nodemon": "^1.0.4",
     "gulp-util": "^2.2.16",
     "load-common-gulp-tasks": "^0.2.1"
